# autodiff

./: CMakeLists.txt  README.md
fwddiff/: abstracts_math.h  polynomial.h  pow.h  solvers.h  uni  uni_differentiate.h
include/: abstracts.h  abstracts_math.h  delta.h  differentiate.h  epsilon.h  functor.h  functor_math.h  multi_differentiate.h  multi_dual.h  multi_dual_math.h  partials.h  polynomial.h  pow.h  solvers.h  taylor.h  tuple_arithmetics.h  uni_differentiate.h  uni_dual.h  uni_math.h  uni_polynomial.h
tests/: CMakeLists.txt  simple_tests.cpp  test_algorithms.cpp  test_differentiation.cpp  test_gradients.cpp  test_laplacian.cpp  test_polynomials.cpp  test_pow.cpp  test_taylor.cpp
visualization/: CMakeLists.txt  ChartVisualizers.cpp  ChartVisualizers.h  differentials.cpp  differentiate_cos.cpp  differentiate_sigmoid.cpp  differentiate_sin.cpp  qtemplates.h  sigmoid.cpp  solvers.cpp  taylor.cpp  taylor_cos.cpp  taylor_exp.cpp  taylor_sin.cpp
